trisla-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: trisla-portal-lb
  namespace: trisla
  labels:
    app: trisla-portal
    service-type: loadbalancer
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8000
      protocol: TCP
  selector:
    app: trisla-portal
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600

---
apiVersion: v1
kind: Service
metadata:
  name: trisla-portal-nodeport
  namespace: trisla
  labels:
    app: trisla-portal
    service-type: nodeport
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
  selector:
    app: trisla-portal
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
