allow-prometheus-to-trisla.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-trisla
  namespace: trisla
spec:
  podSelector:
    matchLabels:
      app: trisla-portal
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8000
  policyTypes:
    - Ingress
